<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myhbo="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@android:drawable/ic_menu_search"
        myhbo:showAsAction="collapseActionView|ifRoom"
        myhbo:actionViewClass="android.support.v7.widget.SearchView" />
</menu>