<?xml version="1.0" encoding="utf-8"?>
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="?android:attr/selectableItemBackground"-->
    <!--android:padding="8dp" >-->


    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:id="@+id/container"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:orientation="horizontal">-->

        <!--&lt;!&ndash; Thumbnail Image &ndash;&gt;-->
        <!--<ImageView-->
            <!--android:id="@+id/thumbnail"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="60dp"-->
            <!--android:layout_height="60dp"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_marginRight="2dp" />-->

        <!--&lt;!&ndash; Movie Title &ndash;&gt;-->
        <!--<TextView-->
            <!--android:id="@+id/title"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="2"-->
            <!--android:textStyle="bold"-->
            <!--android:paddingRight="2dp" />-->

        <!--<ImageView-->
            <!--android:id="@+id/tag"-->
            <!--android:src="@android:drawable/btn_star_big_off"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:clickable="true"-->
            <!--android:layout_weight="1"-->
            <!--/>-->

    <!--</LinearLayout>-->

    <!--&lt;!&ndash; Release Year &ndash;&gt;-->
    <!--<TextView-->
        <!--android:id="@+id/releaseYear"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textColor="@color/year"-->
        <!--android:textSize="@dimen/year"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignBottom="@+id/container"-->
        <!--/>-->




<!--</RelativeLayout>-->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:id="@+id/swiping_layout"
    android:background="@android:color/white"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:clickable="true"
    android:padding="5dip" >

    <!--  ListRow Left sied Thumbnail image -->
    <LinearLayout android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dip"
        android:layout_alignParentLeft="true"
        android:background="@drawable/image_bg"
        android:layout_marginRight="3dip">

        <ImageView
            android:id="@+id/file_type"
            android:layout_width="100dip"
            android:layout_height="100dip"/>

    </LinearLayout>


    <TextView
        android:id="@+id/title"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="15dip"
        android:textStyle="bold"
        android:layout_width="140dp" />



    <!-- Date -->
    <TextView
        android:id="@+id/releaseYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/title"
        android:gravity="right"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="5dp"
        android:textSize="10dip"
        android:textStyle="bold"/>

    <!-- Tagged -->
    <ImageView
        android:id="@+id/tag"
        android:layout_width="30dip"
        android:layout_height="30dip"
        android:layout_marginRight="5dp"
        android:paddingBottom="5dp"
        android:layout_below="@+id/releaseYear"
        android:background="@drawable/tag_selector"
        android:clickable="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>